# Simple-San-Simon-Functional-Web-Browser

./: 3SFWebBrowser.cabal  3SFunctionalWebBrowser.cabal  3swbrowser.cabal  Makefile  README  README.md  Setup.hs  index.html  stack.yaml  uuagc_options
config/: html4.css  test.css
examples/: bach.css  ex1.html  ex2.html  ex3.html  ex4.html  ex5.xml  test1.html  test12.html  test14.html  test16.html  test18.html  test19.html  test2.html  test21.html  test26.html  test27.html  test3.html  test31.html  test32.html  test34.html  test35.html  test7.html  test8.html
src/: Attributes.hs  AuxiliarFunctions.hs  CSSDefaultParser.hs  CSSParser.hs  CombinadoresBasicos.hs  CommonTypes.hs  CounterScope.hs  CssBox.hs  DownloadProcess.hs  HTMLParser.hs  HTMLParser2.hs  ImageProcess.hs  Main.hs  MainBoxerF2Gui.hs  MainBoxerGui.hs  MainWebBrowserGui.hs  NumRomans.hs  PropertiesCSS.hs  PropertyParser.hs  PropertyValue.hs  Propiedades.hs  Settings.hs  TextExtend.hs  Url.hs  Utiles.hs  UtilidadesValores.hs  WebBrowser.hs
src-ag/: BuildLines.ag  CounterProcess.ag  DoComputedValue.ag  FSBox.ag  FSTreeFase1.ag  FSTreeFase2.ag  FormatTree.ag  GenBoxTree.ag  GenWindowTree.ag  GeneratedContent.ag  ListMarker.ag  NTree.ag  ObtenerHojasEstilo.ag  ProcesarEstilo.ag  SelectorProcess.ag  WindowPosition.ag  WindowSize.ag  WrapList.ag
src-derived/: DataTreeCSS.hs  DataTreeHTML.hs  FSBox.hs  FSTreeFase1.hs  FSTreeFase2.hs  FormatTree.hs  NTree.hs  ProcesarEstilo.hs
src/Data/: CommonTypes.hs  DataTreeHTML.ag  Property.hs
src/Parser/: BasicCssParser.hs  CombinadoresBasicos.hs  ParserCSS.hs  ParserHTML.hs  PropertyParser.hs  Propiedades.hs
src/Process/: Attributes.hs  CounterScope.hs  CssBox.hs  DownloadProcess.hs  MatchSelector.hs  PropertyComputedFunction.hs  PropertyUsedFunction.hs
src/Settings/: Settings.hs
src/Utils/: NumRomans.hs  TextExtend.hs  Url.hs  Utiles.hs  ZipperList.hs
src/ag/: BuildLines.ag  CounterProcess.ag  DataTreeCSS.ag  DataTreeHTML.ag  DoComputedValue.ag  DoSpecifiedValue.ag  DoUsedValue.ag  FSBox.ag  FSTreeFase1.ag  FSTreeFase2.ag  FormatTree.ag  GenBoxTree.ag  GenWindowTree.ag  GeneratedContent.ag  GetStyleSheets.ag  ListMarker.ag  MatchSelector.ag  NTree.ag  StyleProcess.ag  WindowPosition.ag  WindowSize.ag  WrapList.ag
test/: ex0.html  test11.html  test17.html  test20.html  test22.html  test25.html  test33.html  test4.html  test6.html  test9.html
tmp/: 3SFunctionalWebBrowser.cabal  LICENSE  Makefile  README
tmp/config/: dbf  html4.css
tmp/doc/hcar/: 3SWebBrowser.aux  3SWebBrowser.out  3SWebBrowser.tex  template.tex
tmp/src/: BasicCssParser.hs  CounterScope.hs  CssBox.hs  DownloadProcess.hs  MainBoxerGui.hs  MainWebBrowserGui.hs  MatchSelector.hs  Metrics.hs  ParserCSS.hs  ParserHTML.hs  Property.hs  PropertyComputedFunction.hs  PropertyParser.hs  PropertyUsedFunction.hs  Settings.hs  Url.hs  ZipperList.hs
tmp/src-ag/: DataTreeCSS.ag  DataTreeHTML.ag  DoSpecifiedValue.ag  DoUsedValue.ag  FSBox.ag  FSTreeFase2.ag  GenWindowTree.ag  NTree.ag  ObtenerHojasEstilo.ag  SelectorProcess.ag  WindowPosition.ag  WindowSize.ag
tmp/test/: article.css  test10.html  test13.html  test15.html  test24.html  test28.html  test29.html  test30.html  test36.html  test5.html
