name:                3SFWebBrowser
version:             0.2.1
homepage:            http://hsbrowser.wordpress.com
synopsis:            Simple Web Browser written with Haskell
description:         
                     Simple San Simon Functional Web Browser (3SF Web Browser) 
                     is an educational project where the idea is to experiment
                     Haskell as a functional programming language to develop
                     a Web Browser.  

                     It supports a simple simple generic markup language and CSS.
license:             BSD3
license-file:        LICENSE
author:              Carlos Gomez
maintainer:          carliros.g@gmail.com
bug-reports:         https://github.com/carliros/Simple-San-Simon-Functional-Web-Browser/issues
category:            Web
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:   README 
                    , config/dbf
                    , config/html4.css
                    , config/user.css
                    , config/tmp/circle.png
                    , config/tmp/default.jpg
                    , config/tmp/disc.png
                    , config/tmp/logo.jpg
                    , config/tmp/minilogo.jpg
                    , config/tmp/square.png
                    , src-ag/*.ag
                    , uuagc_options

source-repository head
    type:       git
    location:   git://github.com/carliros/Simple-San-Simon-Functional-Web-Browser.git

executable 3SFWebBrowser
    --hs-source-dirs: src, src-ag
    --Main-is:        MainWebBrowserGui.hs
    --ghc-options:    -Wall
    --other-modules:   NTree
    --               , Data.DataTreeHTML
    --               , Data.DataTreeCSS
    --               , FSTreeFase1
    --               , FSTreeFase2
    --               , ProcesarEstilo
    --               , FSBox

    --Build-depends:    base
    --                , containers
    --                , url
    --                , directory
    --                , tagsoup
    --                , filepath
    --                , gd
    --                , curl
    --                , uu-parsinglib
    --                , uu-interleaved
    --                , ListLike
    --                , wxcore
    --                , wx
    other-modules:       Data.DataTreeHTML
                       , Data.DataTreeCSS
                       , Utils.Utiles
                       , Data.Property
                       , FSBox
    --                   , NTree
    --                   , FSTreeFase1
    --                   , FSTreeFase2
    --                   , ProcesarEstilo
    hs-source-dirs:      src, src-ag
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , uuagc >= 0.9.53.1
                       , uuagc-cabal >= 1.2.0.0
                       , containers
                       , uu-parsinglib
