Name:               3swbrowser
Version:            1.0
Description:        A Functional Web Browser developed with Haskell
Author:             Carlos Gomez
Maintainer:         carliros@comunidadhaskell.org
Build-Type:         Simple
Cabal-Version:      >=1.2
data-dir: ./config
data-files: html4.css
extra-source-files: ./config/html4.css

Executable 3swbrowser
    Hs-source-dirs:     src
    Main-is:            MainWebBrowserGui.hs
    Build-Depends:        base >= 3 && < 5
                        , uulib
                        , url
                        , directory
                        , tagsoup
                        , containers
                        , filepath
                        , gd
                        , curl
                        , wxcore
                        , wx
                        , process
                        , haskell98
