Name:                3SFunctionalWebBrowser
Version:             0.2
Synopsis:            Simple Functional Web Browser
Description:         Simple San Simon Functional Web Browser with support for a simple generic markup language and CSS
Homepage:            http://hsbrowser.wordpress.com
License:             BSD3
License-File:        LICENSE
Author:              Carlos Gomez
Maintainer:          carliros.g@gmail.com
Bug-reports:         https://github.com/carliros/Simple-San-Simon-Functional-Web-Browser/issues
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Extra-source-files:  README, Makefile, 
                     config/dbf, config/html4.css, config/user.css,
                     tmp/circle.png, tmp/default.jpg, tmp/disc.png, tmp/logo.jpg, tmp/minilogo.jpg, tmp/square.png,
                     src/*.hs, src-derived/*.hs

Source-repository head
    type:       git
    location:   git://github.com/carliros/Simple-San-Simon-Functional-Web-Browser.git

Executable 3sfwbrowser
    hs-source-dirs: src, src-derived
    Main-is:        MainWebBrowserGui.hs
    Build-depends:    base
                    , containers
                    , url
                    , directory
                    , tagsoup
                    , filepath
                    , gd
                    , curl
                    , uu-parsinglib
                    , ListLike
                    , wxcore
                    , wx

